# resolver

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: SECURITY.md
bench/orders/: across_order_001.json  cow_order_001.json  uniswapx_order_001.json
benches/: decision.rs
contracts/: SolverInventoryVault.sol
src/: error.rs  lib.rs  main.rs
src/execution/: mod.rs
src/intents/: across.rs  cow.rs  cow_protocol.rs  mod.rs  types.rs  uniswapx.rs
src/monitor/: mod.rs
src/solver/: engine.rs  mod.rs
src/vault/: mod.rs
test/: SolverInventoryVault.t.sol
tests/fixtures/: cow_auction.json
