[package]
name = "resolver"
version = "0.1.0"
edition = "2021"
description = "High-performance intent solver in Rust. Competes across UniswapX, Across, CoW Protocol."
license = "MIT"
repository = "https://github.com/kcolbchain/resolver"
keywords = ["intents", "solver", "defi", "uniswapx", "mev"]

[dependencies]
alloy = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = []
bench = ["clap"]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bin]]
name = "resolver"
path = "src/main.rs"

[[bin]]
name = "resolver-bench"
path = "src/bin/bench.rs"

[[bench]]
name = "decision"
harness = false
path = "benches/decision.rs"
